really final touch

--- a/Sources/Applications.tex
+++ b/Sources/Applications.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 To further illustrate the applicability of \sedel, we present a case study using
-object Algebras~\citep{oliveira2012extensibility} and extensible
+Object Algebras~\citep{oliveira2012extensibility} and extensible
 \visitor~\citep{oliveira09modular, togersen:2004}. Encodings of extensible
 designs for Object Algebras and extensible \visitor have been presented in
 mainstream languages~\citep{oliveira09modular, togersen:2004,
