--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -236,7 +236,7 @@ ambiguous ($[[1]]$ or $[[2]]$).
 
 When moving to richer types, it is even less clear how to deal with for example,
 intersections of higher-order functions. Consider the following intersection
-types (again takes from \citet{oliveira2016disjoint}):
+types (again taken from \citet{oliveira2016disjoint}):
 \begin{enumerate}
 \item $[[ (nat -> nat) & (string -> string)   ]]$
 \item $[[ (string -> nat) & (string -> string)   ]]$
