--- a/Thesis.bib
+++ b/Thesis.bib
@@ -11,7 +11,7 @@
 @inproceedings{biernacki2015logical,
   title={Logical relations for coherence of effect subtyping},
   author={Biernacki, Dariusz and Polesiuk, Piotr},
-  booktitle={LIPIcs},
+  booktitle={International Conference on Typed Lambda Calculi and Applications (TLCA)},
   year={2015},
 }
 
@@ -94,8 +94,8 @@
 	number = {01},
 	pages = {55},
 	author = {Pierre-Louis Curien and Giorgio Ghelli},
-	title = {Coherence of subsumption, minimum typing and type-checking in F $\leq$},
-	journal = {MSCS}
+	title = {Coherence of subsumption, minimum typing and type-checking in F$_\leq$},
+  journal={Mathematical Structures in Computer Science (MSCS)}
 }
 
 @article{SCHWINGHAMMER_2008,
@@ -105,7 +105,7 @@
 	pages = {157},
 	author = {Jan Schwinghammer},
 	title = {Coherence of subsumption for monadic types},
-	journal = {Journal of Functional Programming}
+	journal = {Journal of Functional Programming (JFP)}
 }
 
 @article{Moggi_1991,
@@ -130,14 +130,14 @@
 @inproceedings{oliveira2016disjoint,
   title={Disjoint intersection types},
   author={Oliveira, Bruno C. d. S. and Shi, Zhiyuan and Alpuim, Jo{\~a}o},
-  booktitle={International Conference on Functional Programming},
+  booktitle={International Conference on Functional Programming (ICFP)},
   year={2016}
 }
 
 @inproceedings{alpuimdisjoint,
   title={Disjoint Polymorphism},
   author={Alpuim, Jo{\~a}o and Oliveira, Bruno C. d. S. and Shi, Zhiyuan},
-  booktitle = {European Symposium on Programming},
+  booktitle = {European Symposium on Programming (ESOP)},
   year={2017}
 }
 
@@ -146,7 +146,7 @@
 	year = 2001,
 	author = {Erik Ernst},
 	title = {Family Polymorphism},
-	booktitle = {European Conference on Object-Oriented Programming}
+	booktitle = {European Conference on Object-Oriented Programming (ECOOP)}
 }
 
 @article{Corradi_2012,
@@ -221,7 +221,7 @@
 @article{compagnoni1996higher,
   title={Higher-order intersection types and multiple inheritance},
   author={Compagnoni, Adriana B and Pierce, Benjamin C},
-  journal={MSCS},
+  journal={Mathematical Structures in Computer Science (MSCS)},
   volume={6},
   number={5},
   pages={469--501},
@@ -239,7 +239,7 @@
 	year = 2016,
 	author = {Tiark Rompf and Nada Amin},
 	title = {Type soundness for dependent object types ({DOT})},
-	booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications}
+	booktitle = {Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)}
 }
 
 @inproceedings{amin2012dependent,
@@ -285,7 +285,7 @@
 	year = 1992,
 	author = {Giuseppe Castagna and Giorgio Ghelli and Giuseppe Longo},
 	title = {A calculus for overloaded functions with subtyping},
-	booktitle = {LFP}
+	booktitle = {Conference on LISP and Functional Programming}
 }
 
 @phdthesis{davies2005practical,
@@ -305,14 +305,14 @@
 	year = 1991,
 	author = {Tim Freeman and Frank Pfenning},
 	title = {Refinement types for {ML}},
-	booktitle = {Conference on Programming Language Design and Implementation}
+	booktitle = {Conference on Programming Language Design and Implementation (PLDI)}
 }
 
 @inproceedings{Davies_2000,
 	year = 2000,
 	author = {Rowan Davies and Frank Pfenning},
 	title = {Intersection types and computational effects},
-	booktitle = {International Conference on Functional Programming}
+	booktitle = {International Conference on Functional Programming (ICFP)}
 }
 
 @inproceedings{dunfield2003type,
@@ -359,8 +359,8 @@
 @inproceedings{ErnstVirtual,
  author = {Ernst, Erik and Ostermann, Klaus and Cook, William R.},
  title = {A Virtual Class Calculus},
- booktitle = {Symposium on Principles of Programming Languages},
- year = {2006},
+ booktitle = {Symposium on Principles of Programming Languages (POPL)},
+ year = {2006}
 }
 
 @book{plotkin1973lambda,
@@ -394,13 +394,13 @@
 	year = 2004,
 	author = {Nathaniel Nystrom and Stephen Chong and Andrew C. Myers},
 	title = {Scalable extensibility via nested inheritance},
-	booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications}
+	booktitle = {Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)}
 }
 
 @inproceedings{reynolds1983types,
   title={Types, Abstraction and Parametric Polymorphism},
   author={Reynolds, John C.},
-  booktitle={IFIP},
+  booktitle={Proceedings of the IFIP 9th World Computer Congress},
   year={1983}
 }
 
@@ -419,12 +419,12 @@
                Angela Schuett and
                Robert van Gent},
   title     = {PolyTOIL: {A} Type-Safe Polymorphic Object-Oriented Language},
-  booktitle = {European Conference on Object-Oriented Programming},
+  booktitle = {European Conference on Object-Oriented Programming (ECOOP)},
   year      = {1995}
 }
 
 @INPROCEEDINGS{pubsdoc:tribe-virtual-calculus,
-booktitle	= {AOSD},
+booktitle	= {International Conference on Aspect-Oriented Software Development (AOSD)},
 title		= {{Tribe: More Types for Virtual Classes}},
 author		= {Clarke, David and Drossopoulou, Sophia and Noble, James and Wrigstad, Tobias},
 year		= {2007},
@@ -436,7 +436,7 @@ year		= {2007},
 	number = {03},
 	author = {Chieri Saito and Atsushi Igarashi and Mirko Viroli},
 	title = {Lightweight family polymorphism},
-	journal = {Journal of Functional Programming}
+	journal = {Journal of Functional Programming (JFP)}
 }
 
 @inproceedings{saito09matching,
@@ -451,14 +451,14 @@ year		= {2007},
 	year = 1989,
 	author = {O. L. Madsen and B. Moller-Pedersen},
 	title = {Virtual classes: a powerful mechanism in object-oriented programming},
-	booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications}
+	booktitle = {Object-Oriented Programming, Systems, Languages, and Applications (OOPLAS)}
 }
 
 @book{LehrmannMadsen:1993:OPB:221048,
  author = {Lehrmann Madsen, Ole and M{\o}-Pedersen, Birger and Nygaard, Kristen},
  title = {Object-oriented Programming in the BETA Programming Language},
  year = {1993},
- publisher = {ACM Press/Addison-Wesley Publishing Co.},
+ publisher={Addison-Wesley}
 }
 
 @inproceedings{Nystrom:2006,
@@ -497,13 +497,13 @@ year		= {2007},
 	year = 2017,
 	author = {Yizhou Zhang and Andrew C. Myers},
 	title = {Familia: unifying interfaces, type classes, and family polymorphism},
-  booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
+  booktitle = {Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)},
 }
 
 @inproceedings{Qi:2009,
  author = {Qi, Xin and Myers, Andrew C.},
  title = {Sharing Classes Between Families},
- booktitle = {Conference on Programming Language Design and Implementation},
+ booktitle = {Conference on Programming Language Design and Implementation (PLDI)},
  year = {2009},
 }
 
@@ -518,7 +518,7 @@ year		= {2007},
 	year = 2015,
 	author = {Jeremy Siek and Peter Thiemann and Philip Wadler},
 	title = {Blame and coercion: together again for the first time},
-	booktitle = {Conference on Programming Language Design and Implementation}
+	booktitle = {Conference on Programming Language Design and Implementation (PLDI)}
 }
 
 @article{Henglein_1994,
@@ -536,7 +536,7 @@ year		= {2007},
 
 @phdthesis{ahmed2004semantics,
   title={Semantics of types for mutable state},
-  author={Ahmed, Amal Jamil},
+  author={Ahmed, Amal},
   year={2004},
   school={Princeton University}
 }
@@ -592,7 +592,7 @@ year		= {2007},
   volume       = 24,
   number       = {2-3},
   pages        = {133-165},
-  journal={Journal of Functional Programming},
+  journal={Journal of Functional Programming (JFP)},
 }
 
 @inproceedings{oliveira09modular,
@@ -636,7 +636,7 @@ year		= {2007},
 @inproceedings{rendel14attributes,
  author = {Rendel, Tillmann and Brachth\"{a}user, Jonathan Immanuel and Ostermann, Klaus},
  title = {From Object Algebras to Attribute Grammars},
- booktitle = {Object Oriented Programming, Systems Languages and Applications (OOPSLA)},
+ booktitle = {Object-Oriented Programming, Systems Languages and Applications (OOPSLA)},
  year = {2014}
 }
 
@@ -658,7 +658,7 @@ year		= {2007},
 @inproceedings{bracha1990mixin,
   title={Mixin-based inheritance},
   author={Bracha, Gilad and Cook, William R.},
-  booktitle={Object-oriented Programming, Systems, Languages and Applications (OOPSLA)},
+  booktitle={Object-Oriented Programming, Systems, Languages and Applications (OOPSLA)},
   year={1990},
 }
 
@@ -788,7 +788,7 @@ year		= {2007},
 @inproceedings{ancona2003jam,
   title={Jam--designing a Java extension with mixins},
   author={Ancona, Davide and Lagorio, Giovanni and Zucca, Elena},
-  booktitle={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  booktitle={Transactions on Programming Languages and Systems (TOPLAS)},
   year={2003},
 }
 
@@ -813,14 +813,14 @@ year		= {2007},
 @inproceedings{odersky2005scalable,
   title={Scalable component abstractions},
   author={Odersky, Martin and Zenger, Matthias},
-  booktitle={Object-Oriented Programming: Systems, Languages and Applications (OOPSLA 2005)},
+  booktitle={Object-Oriented Programming: Systems, Languages and Applications (OOPSLA)},
   year={2005},
 }
 
 @inproceedings{ungar1988self,
   title={SELF: the power of simplicity (object-oriented language)},
   author={Ungar, David and Smith, Randall B},
-  booktitle={Compcon Spring'88. Thirty-Third IEEE Computer Society International Conference, Digest of Papers},
+  booktitle={Thirty-Third IEEE Computer Society International Conference, Digest of Papers},
   year={1988},
 }
 
@@ -846,9 +846,10 @@ year		= {2007},
   year={2010},
 }
 
-@article{scharli2003traitsformal,
+@techreport{scharli2003traitsformal,
   title={Traits: The formal model},
   author={Scharli, Nathanael and Ducasse, St and Wuyts, Roel and Black, Andrew and others},
+  institution={Oregon Health \& Science University},
   year={2003}
 }
 
@@ -1094,7 +1095,7 @@ url = {https://racket-lang.org/}
   volume       = 12,
   number       = 2,
   pages        = {159-182},
-  journal      = {J. Funct. Program.},
+  journal      = {Journal of Functional Programing},
 }
 
 @InProceedings{DBLP:journals/corr/BessaiDDCd15,
@@ -1107,14 +1108,12 @@ url = {https://racket-lang.org/}
 
 @article{Ducasse_2006,
 	year = 2006,
-	month = {3},
-	publisher = {Association for Computing Machinery ({ACM})},
 	volume = {28},
 	number = {2},
 	pages = {331--388},
 	author = {St{\'{e}}phane Ducasse and Oscar Nierstrasz and Nathanael Schärli and Roel Wuyts and Andrew P. Black},
 	title = {Traits: A Mechanism for Fine-grained Reuse},
-	journal = {{ACM} Transactions on Programming Languages and Systems}
+	journal = {Transactions on Programming Languages and Systems (TOPLAS)}
 }
 
 @article{JOT:issue_2006_05/article4,
@@ -1123,9 +1122,7 @@ url = {https://racket-lang.org/}
   journal = {Journal of Object Technology},
   volume = {5},
   number = {4},
-  issn = {1660-1769},
   year = {2006},
-  month = may,
   pages = {129-148},
 }
 
@@ -1142,10 +1139,9 @@ url = {https://racket-lang.org/}
 
 @InProceedings{chai_trait,
   author="Smith, Charles and Drossopoulou, Sophia",
-  editor="Black, Andrew P.",
   title="Chai: Traits for Java-Like Languages",
   booktitle={European Conference on Object-Oriented Programming (ECOOP)},
-  year="2005",
+  year=2005
 }
 
 @article{BETTINI2013521,
@@ -1209,30 +1205,26 @@ keywords = "Featherweight Java, Trait, Type system"
 
 @article{Rossberg_2013,
 	year = 2013,
-	month = {4},
-	publisher = {Association for Computing Machinery ({ACM})},
 	volume = {35},
 	number = {1},
 	pages = {1--84},
 	author = {Andreas Rossberg and Derek Dreyer},
 	title = {Mixin' Up the {ML} Module System},
-	journal = {{ACM} Transactions on Programming Languages and Systems}
+	journal = {Transactions on Programming Languages and Systems (TOPLAS)}
 }
 
 @inproceedings{MacQueen_1984,
 	year = 1984,
 	author = {David MacQueen},
 	title = {Modules for standard {ML}},
-	booktitle = {Proceedings of the 1984 {ACM} Symposium on {LISP} and functional programming  - {LFP} {\textquotesingle}84}
+	booktitle = {Symposium on {LISP} and functional programming (LFP)}
 }
 
 @INPROCEEDINGS{Bracha92modularitymeets,
     author = {Gilad Bracha and Gary Lindstrom},
     title = {Modularity meets Inheritance},
     booktitle = {International Conference on Computer Languages},
-    year = {1992},
-    pages = {282--290},
-    publisher = {IEEE Computer Society}
+    year = {1992}
 }
 
 
@@ -1304,8 +1296,7 @@ booktitle = {Archiv. Math. Logik}
   title={Data types à la carte},
   volume={18},
   number={4},
-  journal={Journal of Functional Programming},
-  publisher={Cambridge University Press},
+  journal={Journal of Functional Programming (JFP)},
   author={Swierstra, Wouter},
   year={2008},
   pages={423–436}
@@ -1384,8 +1375,7 @@ booktitle = {Archiv. Math. Logik}
 @inproceedings{xie2018consistent,
   title={Consistent Subtyping for All},
   author={Xie, Ningning and Bi, Xuan and Oliveira, Bruno C. d. S.},
-  booktitle={European Symposium on Programming},
-  pages={3--30},
+  booktitle={European Symposium on Programming (ESOP)},
   year={2018},
 }
 
@@ -1415,8 +1405,7 @@ booktitle = {Archiv. Math. Logik}
   author    = {Luca Cardelli},
   title     = {Amber},
   booktitle = {Combinators and Functional Programming Languages, Thirteenth Spring
-               School of the LITP, Val d'Ajol, France, May 6-10, 1985, Proceedings},
-  pages     = {21--47},
+               School of the LITP},
   year      = {1985}
 }
 
@@ -1433,10 +1422,8 @@ booktitle = {Archiv. Math. Logik}
 @inproceedings{ahmed2006step,
   title={Step-indexed syntactic logical relations for recursive and quantified types},
   author={Ahmed, Amal},
-  booktitle={European Symposium on Programming},
-  pages={69--83},
-  year={2006},
-  organization={Springer}
+  booktitle={European Symposium on Programming (ESOP)},
+  year={2006}
 }
 
 @inproceedings{bono2008traits,
@@ -1488,25 +1475,21 @@ booktitle = {Archiv. Math. Logik}
   title={Operations on records},
   author={Cardelli, Luca and Mitchell, John C},
   booktitle={International Conference on Mathematical Foundations of Programming Semantics},
-  pages={22--52},
-  year={1989},
-  organization={Springer}
+  year={1989}
 }
 
 @inproceedings{Crary_1999,
 	year = 1999,
-	publisher = {{ACM} Press},
 	author = {Karl Crary and Robert Harper and Sidd Puri},
 	title = {What is a recursive module?},
-	booktitle = {Proceedings of the {ACM} {SIGPLAN} 1999 conference on Programming language design and implementation  - {PLDI} {\textquotesingle}99}
+	booktitle = {Programming Language Design and Implementation (PLDI)}
 }
 
 @inproceedings{Russo_2001,
 	year = 2001,
-	publisher = {{ACM} Press},
 	author = {Claudio V. Russo},
 	title = {Recursive structures for standard {ML}},
-	booktitle = {Proceedings of the sixth {ACM} {SIGPLAN} international conference on Functional programming  - {ICFP} {\textquotesingle}01}
+	booktitle = {International Conference on Functional Programming (ICFP)}
 }
 
 @article{ROSSBERG_2014,
@@ -1516,7 +1499,7 @@ booktitle = {Archiv. Math. Logik}
 	pages = {529--607},
 	author = {Andreas Rossberg and Claudio Russo and Derek Dreyer},
 	title = {F-ing modules},
-	journal = {Journal of Functional Programming}
+	journal = {Journal of Functional Programming (JFP)}
 }
 
 
@@ -1525,5 +1508,5 @@ booktitle = {Archiv. Math. Logik}
 	publisher = {{ACM} Press},
 	author = {Andreas Rossberg},
 	title = {1ML {\textendash} core and modules united (F-ing first-class modules)},
-	booktitle = {Proceedings of the 20th {ACM} {SIGPLAN} International Conference on Functional Programming - {ICFP} 2015}
+	booktitle = {International Conference on Functional Programming (ICFP)}
 }
