how can I not cite my own papers?

--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -513,7 +513,7 @@ structure of the technical content in the thesis is divided into three parts:
 \Cref{sec:related} reviews related work, \cref{chap:future} presents some future
 work and finally \cref{chap:conclusion} concludes.
 
-This thesis is largely based on two publications by the author, which are shown
+This thesis is largely based on two publications~\citep{bi_et_al:LIPIcs:2018:9214, bi_et_al:LIPIcs:2018:9227} by the author, which are shown
 in the list below with corresponding chapters indicated. The work on \fnamee is
 based on an on-going draft by the author (\cref{chap:fi,chap:coherence:poly}).
 In comparison to the original publications, this thesis contains a more in-depth
