--- a/Thesis.bib
+++ b/Thesis.bib
@@ -597,7 +597,7 @@ year		= {2007},
 
 @inproceedings{oliveira09modular,
   title = {Modular Visitor Components: A Practical Solution to the Expression Families Problem},
-  author = {Oliveira, Bruno C. d. S. },
+  author = {Oliveira, Bruno C. d. S.},
   year = {2009},
   booktitle = {European Conference on Object Oriented Programming (ECOOP)},
 }
@@ -1257,14 +1257,14 @@ keywords = "Featherweight Java, Trait, Type system"
 }
 
 @InProceedings{bi_et_al:LIPIcs:2018:9227,
-  author =	{Xuan Bi and Bruno C. d. S. Oliveira and Tom Schrijvers},
+  author =	{Bi, Xuan and Oliveira, Bruno C. d. S. and Schrijvers, Tom},
   title =	{{The Essence of Nested Composition}},
   booktitle =	{European Conference on Object-Oriented Programming  (ECOOP)},
   year =	{2018},
 }
 
 @InProceedings{bi_et_al:LIPIcs:2018:9214,
-  author =	{Xuan Bi and Bruno C. d. S. Oliveira},
+  author =	{Bi, Xuan and Oliveira, Bruno C. d. S.},
   title =	{{Typed First-Class Traits}},
   booktitle =	{European Conference on Object-Oriented Programming  (ECOOP)},
   year =	{2018},
