bibliography: add back references

--- a/Sources/Nested/overview.tex
+++ b/Sources/Nested/overview.tex
@@ -8,7 +8,7 @@ features.
 
 
 %-------------------------------------------------------------------------------
-\subsection{The expression problem, \namee Style}
+\subsection{The Expression Problem, \namee Style}
 
 The \namee calculus allows us to solve the expression problem in a way that is
 very similar to \citeauthor{Ernst_2001}'s \textsf{gbeta} solution in \cref{sec:ernst}.
