--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -480,14 +480,14 @@ In summary the contributions of this thesis are:
 % \end{itemize}
 
 
-\section{Structure of the Thesis}
+\section{Organization}
 
 We begin with some background in the main topics of this thesis in
 \cref{chap:background} in order to keep this thesis as self-contained as
 possible and also to put our methods and contributions into context. The
 structure of the technical content in the thesis is divided into three parts:
 \begin{description}
-\item[Part I:] \Cref{chap:nested,chap:fi} formally define the type systems of
+\item[\cref{part:typesystem}:] \Cref{chap:nested,chap:fi} formally define the type systems of
   \namee and \fnamee, respectively. We first give the syntax and semantics of
   the two calculi. The semantics is defined in two parts. The ``target''
   languages are two standard type systems (simply-typed lambda calculus and
@@ -496,7 +496,7 @@ structure of the technical content in the thesis is divided into three parts:
   the target languages, contain intersection types, the merge operator and
   subtyping. We then prove some basic properties such as type safety of
   the elaboration, soundness and completeness of the algorithmic subtyping, etc.
-\item[Part II:] \Cref{chap:coherence:simple,chap:coherence:poly} explore the
+\item[\cref{part:coherence}:] \Cref{chap:coherence:simple,chap:coherence:poly} explore the
   issue of coherence. In \cref{chap:coherence:simple} we first propose a
   semantically founded definition of coherence. We then use a proof method
   called the canonicity relation to establish coherence of \namee. In
@@ -504,7 +504,7 @@ structure of the technical content in the thesis is divided into three parts:
   \cref{chap:coherence:simple} but encounter a severe issue of impredicativity.
   We impose a predicativity restriction and adapt the canonicity relation to
   establish coherence of \fnamee.
-\item[Part III:] In \cref{chap:traits} we present the syntax and semantics of
+\item[\cref{part:applications}:] In \cref{chap:traits} we present the syntax and semantics of
   \sedel. In particular we show how to elaborate source-level constructs for
   first-class traits into expressions of \fnamee. In \cref{chap:case_study} we
   conduct a case study of modularizing programming language features using a
