--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -417,7 +417,7 @@ in a \emph{lower} position results in code duplication. To overcome this
 limitation, \emph{multiple inheritance} was proposed as a generalization of
 single inheritance. However, as \citet{cook:multi} put it:
 \begin{quote}
-  ``Multiple inheritance is good, but there is no good way to do it.''
+  \emph{``Multiple inheritance is good, but there is no good way to do it.''}
 \end{quote}
 One of the problems in multiple inheritance is the ambiguity issue that arises
 when conflicting features are inherited along different paths. A classic
@@ -522,10 +522,10 @@ and extensibility with one of the most elegant and concise solutions to the
 \emph{expression problem}~\citep{wadler1998expression}. The expression problem,
 as surveyed by \citet{togersen:2004}, is to answer the question:
 \begin{quote}
-  ``To which degree can your application be structured in such a way that both
+  \emph{``To which degree can your application be structured in such a way that both
   the data model and the set of virtual operations over it can be extended
   without the need to modify existing code, without the need for code repetition
-  and without run-time type errors.''
+  and without run-time type errors.''}
 \end{quote}
 The expression problem is concerned with two-dimensional extensions:
 \begin{inparaenum}[(1)]
