--- a/Sources/Future.tex
+++ b/Sources/Future.tex
@@ -12,9 +12,9 @@ An interesting avenue for future work is to give a categorical semantics of
 disjoint intersection types. The main reason for doing so is that, as
 \citet{reynolds1988preliminary} nicely put it:
 \begin{quote}
-  ``by formulating succinct definitions in terms of a mathematical theory of
+  \emph{``by formulating succinct definitions in terms of a mathematical theory of
   great generality, we gain an assurance that our language will be uniform and
-  general.''
+  general.''}
 \end{quote}
 Using category theory as the basis for the type structure of a programming
 language has a long history. \citet{lambek1985cartesian} discovered that
