--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -247,7 +247,7 @@ language level. More specifically, we seek to rein in ideas that are seemingly
 unrelated but powerful in object-oriented programming---dynamic inheritance,
 first-class traits, family polymorphism---under a simple unifying mechanism:
 they are but different manifestations of a single underlying type discipline:
-\emph{disjoint intersection types}. Through many examples and rigorous
+\emph{disjoint intersection types}. Through a serious of examples and rigorous
 analysis in this thesis, we hope to convince readers that disjoint intersection
 types are a feasible semantic tool to facilitate code reuse and modularity. In
 particular, for family polymorphism, we show that the combination of the
