--- a/packages.tex
+++ b/packages.tex
@@ -3,6 +3,7 @@
 \usepackage{url}
 \usepackage{fancyvrb}
 \usepackage{mdwlist}  % Miscellaneous list-related commands
+\usepackage{bookmark}
 
 % https://www.nesono.com/?q=book/export/html/347
 % Package for inserting TODO statements in nice colorful boxes - so that you
