--- a/acknowledgment.tex
+++ b/acknowledgment.tex
@@ -1,4 +1,6 @@
 
+(To be filled in with more personal details...)
+
 First and foremost, I would like to thank my PhD supervisor Dr. Bruno C. d. S.
 Oliveira for his continued support and mentorship throughout my studies. I would
 also like to thank my co-supervisor Prof. T.H. Tse for his valuable suggestions
@@ -9,7 +11,7 @@ Schrijvers from KU Leuven. I enjoyed very much our collaboration on a topic of
 mutual interest, which led to one of the key publications for this PhD
 dissertation. I learned a lot from you! During the years I spent at HKU, I had
 the opportunity to collaborate with a number of excellent fellow researchers, to
-name a few, Tomas Tauber, Zhiyuan Shi, Weixin Zhang, Huang Li, Yanpeng Yang and
-Ningning Xie. Last but not least, I would love to thank my family for being
-extremely supportive throughout my studies. I made it through thanks to all of
-you.
+name a few, Tomas Tauber, Zhiyuan Shi, Weixin Zhang, Huang Li, Yanpeng Yang,
+Ningning Xie, Yanlin Wang, Haoyuan Zhang. Last but not least, I would love to
+thank my family for being extremely supportive throughout my studies. I made it
+through thanks to all of you.
