--- a/Sources/Polymorphism.tex
+++ b/Sources/Polymorphism.tex
@@ -17,14 +17,10 @@ simplicity of the coherence proof. We will further discuss this in
 typed first-class traits, which will be introduced in \cref{chap:traits}.
 
 
-
-\input{Sources/Poly/overview.mng}
-
-\input{Sources/Poly/typesystem.mng}
-
-\input{Sources/Poly/disjoint.mng}
-
-\input{Sources/Poly/elaboration.mng}
+\input{Gen/Poly/overview.tex}
+\input{Gen/Poly/typesystem.tex}
+\input{Gen/Poly/disjoint.tex}
+\input{Gen/Poly/elaboration.tex}
 
 
 %%% Local Variables:
