--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -104,7 +104,7 @@ statically typed object-oriented languages.
 
 \input{Sources/Traits/overview.tex}
 \input{Sources/Traits/traits.tex}
-\input{Sources/Traits/typesystem.mng}
+\input{Gen/Traits/typesystem.tex}
 
 %%% Local Variables:
 %%% mode: latex
