--- a/packages.tex
+++ b/packages.tex
@@ -31,11 +31,12 @@
 \savesymbol{checkmark}
 \usepackage{dingbat}
 
-\usepackage{ottalt}
-
 \usepackage{comment}
 
 \usepackage{longtable}
+
+\usepackage{tikz-cd}
+\usetikzlibrary{babel}
 
 
 % Code highlighting
