--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -65,3 +65,5 @@
 \newcommand{\hll}[2][gray!40]{\colorbox{#1}{#2}}
 \newcommand{\hlmath}[2][gray!40]{%
   \colorbox{#1}{$\displaystyle#2$}}
+
+\newcommand{\rulehl}[1]{}
