add new coercion

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -52,10 +52,12 @@
 % Bibliography
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage[sort]{natbib}
+\usepackage{natbib}
 \setcitestyle{%
     authoryear,%
-    open={[},close={]},citesep={;},%
+    sort,
+    square,
+    semicolon,%
     aysep={},yysep={,},%
     notesep={, }}
 
