--- a/Sources/Traits/overview.tex
+++ b/Sources/Traits/overview.tex
@@ -415,7 +415,7 @@ Unsurprisingly, changing the mixin application order to
 \begin{lstlisting}
   inherits spell_mixin ModalEdit (modal_mixin Top editor)
 \end{lstlisting}
-gives the same (expected) behavior.
+gives the same difference as in the JavaScript version (\lstinline{on_key} from \lstinline{spell_mixin} is inherited).
 
 
 Admittedly the typed version is unnecessarily complicated as we were
