--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -263,7 +263,7 @@ details are to be delivered in later chapters.
 
 \subsection{Disjoint Intersection Types}
 
-A central theme of this thesis are \emph{intersection types} (usually written
+One recurring theme of this thesis are \emph{intersection types} (usually written
 $\inter{A}{B}$). Intersection types~\citep{pottinger1980type, coppoInter} have a
 long history in programming languages. They were originally introduced to
 characterize exactly all strongly normalizing lambda terms. Since then, starting
